--- a/old/index.html
+++ b/old/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<meta http-equiv="refresh" content="0;url=old/index.html">
+		<meta http-equiv="refresh" content="0;url=guide-en.html">
 	</head>
 	<body>
 	</body>
