Updated style guide draft by @cfarquharson.

--- a/new/design/buttons-en.html
+++ b/new/design/buttons-en.html
@@ -23,7 +23,7 @@
           <h2 class="panel-title">Table of contents</h2>
         </div>
         <div class="panel-body">
-          <ul class="clmn-2">
+          <ul class="clmn-2-sm">
             <li><a href="#description">Description</a></li>
             <li><a href="#default">Default appearance </a></li>
             <li><a href="#buttons-tags">Button basics</a></li>
