--- a/new/design/icons-en.html
+++ b/new/design/icons-en.html
@@ -44,7 +44,7 @@
   <h2 id="description">Description</h2>
   <p>There are 200 glyphs in font format from the Glyphicon Halflings set. <a href="http://glyphicons.com/">Glyphicons</a> Halflings are normally not available for free, but their creator has made them available for Bootstrap free of cost. Include a link back to <a href="http://glyphicons.com/">Glyphicons</a> whenever possible.</p>
   <h2 id="options">Options</h2>
-  <ul class="list-unstyled clmn-3">
+  <ul class="list-unstyled clmn-2-sm clmn-3-md">
     <li> <span class="glyphicon glyphicon-adjust"></span> <span class="glyphicon-class">.glyphicon .glyphicon-adjust</span> </li>
     <li> <span class="glyphicon glyphicon-align-center"></span> <span class="glyphicon-class">.glyphicon .glyphicon-align-center</span> </li>
     <li> <span class="glyphicon glyphicon-align-justify"></span> <span class="glyphicon-class">.glyphicon .glyphicon-align-justify</span> </li>
