--- a/new/writing/formatting-en.html
+++ b/new/writing/formatting-en.html
@@ -35,7 +35,7 @@
       <h2 class="panel-title">Table of contents</h2>
     </div>
     <div class="panel-body">
-      <ul class="clmn-3">
+      <ul class="clmn-2-sm clmn-3-md">
         <li><a href="#acronyms">Acronyms and initialisms</a></li>
         <li><a href="#addresses">Addresses</a></li>
         <li><a href="#blockquotes">Blockquotes</a></li>
