--- a/new/writing/index-en.html
+++ b/new/writing/index-en.html
@@ -22,7 +22,7 @@
         <p>The writing guide provides the principals needed to ensure content is well formatted for the web and that it adheres to specific technical writing requirements.</p>
       </div>
     </div>
-    <ul class="clmn-2 list-unstyled">
+    <ul class="clmn-2-sm list-unstyled">
       <li><a href="principals-en.html">Content creation principals</a>
         <ul>
           <li><a href="principals-en.html#print">Print versus Web</a></li>
