--- a/new/writing/principals-en.html
+++ b/new/writing/principals-en.html
@@ -24,7 +24,7 @@ blockquote p {font-size:16px;}
   <div class="panel-heading">
     <h2 class="panel-title">Table of contents</h2>
   </div>
-  <ul class="clmn-3 mrgn-tp-md">
+  <ul class="clmn-2-sm clmn-3-md mrgn-tp-md">
     <li><a href="#print">Print versus Web</a></li>
     <li><a href="#development">Content development </a>
       <ul>
