Updated style guide draft by @cfarquharson.

--- a/new/design/badges-en.html
+++ b/new/design/badges-en.html
@@ -37,7 +37,7 @@
         <div class="panel-heading">
           <h2 class="panel-title">Related style guide resources</h2>
         </div>
-        <div class="list-group"><a href="listgroup-en.html" class="list-group-item">List group - Design guide </a></div>
+        <div class="list-group"><a href="labels-en.html" class="list-group-item">Labels - Design guide </a> <a href="pills-en.html" class="list-group-item">Pills - Design guide </a></div>
       </div>
     </div>
   </div>
