--- a/new/design/borders-en.html
+++ b/new/design/borders-en.html
@@ -44,43 +44,52 @@
   <p>Borders can be added to a grid cell. Since grids have a left and right gutter, the border will be appear on outside edge of the gutter.</p>
   <div class="row">
     <div class="col-md-3 brdr-tp">
-      <p class="mrgn-tp-md mrgn-bttm-md"><code>&lt;div class=&quot;col-md-3 brdr-tp&quot;&gt;</code></p>
+      <p class="mrgn-tp-md">Top border <span class="glyphicon glyphicon-arrow-up"></span></p>
+	  <p class="mrgn-tp-md mrgn-bttm-md"><code>&lt;div class=&quot;col-md-3 brdr-tp&quot;&gt;</code></p>
     </div>
     <div class="col-md-3 brdr-rght">
+	  <p class="mrgn-tp-md">Right border <span class="glyphicon glyphicon-arrow-right"></span></p>
       <p class="mrgn-tp-md mrgn-bttm-md"><code>&lt;div class=&quot;col-md-3 brdr-rght&quot;&gt;</code></p>
     </div>
     <div class="col-md-3 brdr-bttm">
+	  <p class="mrgn-tp-md">Top bottom <span class="glyphicon glyphicon-arrow-down"></span></p>
       <p class="mrgn-tp-md mrgn-bttm-md"><code>&lt;div class=&quot;col-md-3 brdr-bttm&quot;&gt;</code></p>
     </div>
     <div class="col-md-3 brdr-lft">
+	  <p class="mrgn-tp-md">Left border <span class="glyphicon glyphicon-arrow-left"></span></p>
       <p class="mrgn-tp-md mrgn-bttm-md"><code>&lt;div class=&quot;col-md-3 brdr-lft&quot;&gt;</code></p>
     </div>
   </div>
   <p>Borders can be added to content.</p>
   <div class="row">
     <div class="col-md-3">
-      <p class="brdr-tp"><span class="mrgn-tp-md mrgn-bttm-md"><code>&lt;p class=&quot;brdr-tp&quot;&gt;</code></span></p>
+      <p class="brdr-tp"><span class="mrgn-tp-md mrgn-bttm-md">Top border <span class="glyphicon glyphicon-arrow-up"></span><br>
+<code>&lt;p class=&quot;brdr-tp&quot;&gt;</code></span></p>
     </div>
     <div class="col-md-3">
-      <p class="brdr-rght"><span class="mrgn-tp-md mrgn-bttm-md"><code>&lt;p class=&quot;brdr-rght&quot;&gt;</code></span></p>
+      <p class="brdr-rght"><span class="mrgn-tp-md mrgn-bttm-md">Right border <span class="glyphicon glyphicon-arrow-right"></span><br>
+<code>&lt;p class=&quot;brdr-rght&quot;&gt;</code></span></p>
     </div>
     <div class="col-md-3">
-      <p class="brdr-bttm"><span class="mrgn-tp-md mrgn-bttm-md"><code>&lt;p class=&quot;brdr-bttm&quot;&gt;</code></span></p>
+      <p class="brdr-bttm"><span class="mrgn-tp-md mrgn-bttm-md">Bottom border <span class="glyphicon glyphicon-arrow-down"></span><br>
+<code>&lt;p class=&quot;brdr-bttm&quot;&gt;</code></span></p>
     </div>
     <div class="col-md-3">
-      <p class="brdr-lft"><span class="mrgn-tp-md mrgn-bttm-md"><code>&lt;p class=&quot;brdr-lft&quot;&gt;</code></span></p>
+      <p class="brdr-lft"><span class="mrgn-tp-md mrgn-bttm-md">Left border <span class="glyphicon glyphicon-arrow-left"></span><br>
+<code>&lt;p class=&quot;brdr-lft&quot;&gt;</code></span></p>
     </div>
   </div>
   <p>Multiple borders can be added to the same element.</p>
   <div class="row">
     <div class="col-md-3 brdr-tp brdr-lft">
-      <p class="mrgn-tp-md mrgn-bttm-md"><span class="mrgn-tp-md mrgn-bttm-md"><code>&lt;div class=&quot;col-md-3 brdr-tp brdr-lft&quot;&gt;</code></span></p>
+      <p class="mrgn-tp-md mrgn-bttm-md"><span class="mrgn-tp-md mrgn-bttm-md">Top and left border <span class="glyphicon glyphicon-arrow-up"></span> <span class="glyphicon glyphicon-arrow-left"></span><br>
+<code>&lt;div class=&quot;col-md-3 brdr-tp brdr-lft&quot;&gt;</code></span></p>
     </div>
     <div class="col-md-3 brdr-bttm brdr-rght">
-      <p class="mrgn-tp-md mrgn-bttm-md"><span class="mrgn-tp-md mrgn-bttm-md"><code>&lt;div class=&quot;col-md-3 brdr-bttm brdr-rght&quot;&gt;</code></span></p>
+      <p class="mrgn-tp-md mrgn-bttm-md"><span class="mrgn-tp-md mrgn-bttm-md">Bottom and right border <span class="glyphicon glyphicon-arrow-down"></span> <span class="glyphicon glyphicon-arrow-right"></span><br><code>&lt;div class=&quot;col-md-3 brdr-bttm brdr-rght&quot;&gt;</code></span></p>
     </div>
     <div class="col-md-6">
-      <p class="brdr-tp brdr-rght brdr-bttm brdr-lft"><span class="mrgn-tp-md mrgn-bttm-md"><code>&lt;p class=&quot;brdr-tp brdr-rght brdr-bttm brdr-lft&quot;&gt;</code></span></p>
+      <div class="brdr-tp brdr-rght brdr-bttm brdr-lft"><p class="mrgn-tp-md mrgn-bttm-md mrgn-lft-md mrgn-rght-md">Top, right, bottom and left border <span class="glyphicon glyphicon-arrow-up"></span> <span class="glyphicon glyphicon-arrow-right"></span> <span class="glyphicon glyphicon-arrow-down"></span>  <span class="glyphicon glyphicon-arrow-left"></span><br><code>&lt;p class=&quot;brdr-tp brdr-rght brdr-bttm brdr-lft&quot;&gt;</code></p></div>
     </div>
   </div>
   <div class="row wb-eqht mrgn-tp-lg mrgn-bttm-xl">
