--- a/new/design/index-en.html
+++ b/new/design/index-en.html
@@ -31,6 +31,7 @@
     <div class="list-group"><a href="index-en.html" class="list-group-item active"> Design guide </a> <a href="../writing/index-en.html" class="list-group-item">Writing guide</a> <a href="../usability/index-en.html" class="list-group-item">Usability guide</a> <a href="../accessibility/index-en.html" class="list-group-item">Accessibility guide</a></div>
   </div>
 </div>
+<p> These components can also be view on a one-pager: <a href="options-en.html" class="btn btn-success">Design options</a></p>
 <h2 id="core" class="mrgn-tp-0">Core components</h2>
 <p>These components are pure CSS and require no added functionality to work.</p>
 <div class="panel panel-default">
@@ -78,6 +79,7 @@
           <li><a href="buttons-en.html">Buttons</a></li>
           <li><a href="listgroup-en.html">List group </a></li>
           <li><a href="pagination-en.html">Pagination</a></li>
+          <li><a href="pills-en.html">Pills</a></li>
         </ul>
       </div>
       <div class="col-md-3">
@@ -88,6 +90,7 @@
           <li><a href="alerts-en.html">Alerts</a></li>
           <li><a href="badges-en.html">Badges</a></li>
           <li><a href="buttons-en.html">Buttons</a></li>
+          <li><a href="labels-en.html">Labels</a></li>
           <li><a href="jumbotron-en.html">Jumbotron</a></li>
           <li><a href="panels-en.html">Panels</a></li>
           <li><a href="progress-en.html">Progress bar </a></li>
