--- a/new/design/links-en.html
+++ b/new/design/links-en.html
@@ -36,7 +36,7 @@
         <div class="panel-heading">
           <h2 class="panel-title">Related style guide resources</h2>
         </div>
-        <div class="list-group"><a href="alerts-en.html" class="list-group-item">Alerts - Design guide</a> <a href="buttons-en.html" class="list-group-item">Buttons - Design guide</a> <a href="listgroup-en.html" class="list-group-item">List groups  - Design guide</a> <a href="pagination-en.html" class="list-group-item">Pagination - Design guide</a> <a href="../accessibility/links-en.html" class="list-group-item">Links - Accessibility guide</a> <a href="../writing/principals-en.html#links" class="list-group-item">Link principals - Writing guide</a> <a href="../writing/formatting-en.html#links" class="list-group-item">Link formatting - Writing guide</a></div>
+        <div class="list-group"><a href="alerts-en.html" class="list-group-item">Alerts - Design guide</a> <a href="buttons-en.html" class="list-group-item">Buttons - Design guide</a> <a href="listgroup-en.html" class="list-group-item">List groups  - Design guide</a> <a href="pagination-en.html" class="list-group-item">Pagination - Design guide</a> <a href="pills-en.html" class="list-group-item">Pills - Design guide</a> <a href="../accessibility/links-en.html" class="list-group-item">Links - Accessibility guide</a> <a href="../writing/principals-en.html#links" class="list-group-item">Link principals - Writing guide</a> <a href="../writing/formatting-en.html#links" class="list-group-item">Link formatting - Writing guide</a></div>
       </div>
     </div>
   </div>
