--- a/new/design/lists-en.html
+++ b/new/design/lists-en.html
@@ -43,7 +43,7 @@
         <div class="panel-heading">
           <h2 class="panel-title">Related style guide resources</h2>
         </div>
-        <div class="list-group"><a href="listgroup-en.html" class="list-group-item">List group - Design guide</a> <a href="buttons-en.html" class="list-group-item">Buttons - Design guide</a> <a href="../writing/principals-en.html#lists" class="list-group-item">List principals - Writing guide</a> <a href="../writing/formatting-en.html#lists" class="list-group-item">List formatting - Writing guide</a></div>
+        <div class="list-group"><a href="listgroup-en.html" class="list-group-item">List group - Design guide</a> <a href="pills-en.html" class="list-group-item">Pills - Design guide</a> <a href="buttons-en.html" class="list-group-item">Buttons - Design guide</a> <a href="../writing/principals-en.html#lists" class="list-group-item">List principals - Writing guide</a> <a href="../writing/formatting-en.html#lists" class="list-group-item">List formatting - Writing guide</a></div>
       </div>
     </div>
   </div>
