--- a/new/accessibility/index-en.html
+++ b/new/accessibility/index-en.html
@@ -31,7 +31,7 @@
           <li><a href="summary-en.html">Summary of coding requirements</a></li>
           <li><a href="colour-en.html">Colour</a></li>
           <li><a href="forms-en.html">Forms</a></li>
-          <li><a href="headings-en.html">Headings and Titles</a></li>
+          <li><a href="headings-en.html">Headings and titles</a></li>
           <li><a href="images-en.html">Images</a></li>
           <li><a href="keyboard-en.html">Keyboard and user controls</a></li>
           <li><a href="links-en.html">Links</a></li>
