--- a/new/index-en.html
+++ b/new/index-en.html
@@ -7,46 +7,122 @@
 <link rel="stylesheet" href="http://wet-boew.github.io/v4.0-ci/css/theme.min.css"/>
 </head>
 <body class="container">
+<ol class="breadcrumb">
+  <li><a href="http://wet-boew.github.io/v4.0-ci/demos/index-en.html">Home</a></li>
+  <li><a href="https://github.com/wet-boew/wet-boew/wiki/Implementing-WET">Implement WET </a></li>
+  <li>Style guide</li>
+</ol>
 <h1>Style guide</h1>
-<p>The style guide is broken down into four distinct guides and adherence them is mandatory.  This ensures that the content is accessible, usable, well formatted, well written and well positioned for future changes.</p>
+<p>The style guide is broken down into  alternatively <a href="#category">four categories</a> or <a href="#role">five roles</a>.  Adherence to them is mandatory.  This will ensure that the content is accessible, usable, well formatted, well written and well positioned for future changes.</p>
+
+<h2 id="category">Style guide by category</h2>
 <div class="row">
   <div class="col-md-3">
     <div class="panel panel-default">
+      <div class="panel-heading">
+        <h3 class="panel-title">Design guide</h3>
+      </div>
       <div class="panel-body">
-        <h2 class="h3 mrgn-tp-0">Design guide</h2>
         <p>Offers a large selection of design and layout features for both basic and complex designs.</p>
         <p><a href="design/index-en.html"><img src="design.jpg" alt="Design guide" class="img-responsive" /></a></p>
-        <p><a href="design/index-en.html" class="btn btn-primary btn-block">Design guide</a></p>
+        <p><a href="design/index-en.html" class="btn btn-info btn-block">Design guide</a></p>
       </div>
     </div>
   </div>
   <div class="col-md-3">
     <div class="panel panel-default">
+      <div class="panel-heading">
+        <h3 class="panel-title">Writing guide</h3>
+      </div>
       <div class="panel-body">
-        <h2 class="h3 mrgn-tp-0">Writing guide</h2>
         <p>Create content that is written for the web and follows specific technical writing requirements.</p>
         <p><a href="writing/index-en.html"><img src="writing.jpg" alt="Writing guide" class="img-responsive" /></a></p>
-        <p><a href="writing/index-en.html" class="btn btn-primary btn-block">Writing guide</a></p>
+        <p><a href="writing/index-en.html" class="btn btn-info btn-block">Writing guide</a></p>
       </div>
     </div>
   </div>
   <div class="col-md-3">
     <div class="panel panel-default">
+      <div class="panel-heading">
+        <h3 class="panel-title">Usability guide</h3>
+      </div>
       <div class="panel-body">
-        <h2 class="h3 mrgn-tp-0">Usability guide</h2>
         <p>User behaviour needs to be understood in order to create content that is usable.</p>
         <p><a href="usability/index-en.html"><img src="usability.jpg" alt="Usability guide" class="img-responsive" /></a></p>
-        <p><a href="usability/index-en.html" class="btn btn-primary btn-block">Usability guide</a></p>
+        <p><a href="usability/index-en.html" class="btn btn-info btn-block">Usability guide</a></p>
       </div>
     </div>
   </div>
   <div class="col-md-3">
     <div class="panel panel-default">
+      <div class="panel-heading">
+        <h3 class="panel-title">Accessibility guide</h3>
+      </div>
       <div class="panel-body">
-        <h2 class="h3 mrgn-tp-0">Accessibility guide</h2>
         <p>Create and code content so that is accessible to all users, regardless of ability or disability.</p>
         <p><a href="accessibility/index-en.html"><img src="accessibility.jpg" alt="Accessibility guide" class="img-responsive" /></a></p>
-        <p><a href="accessibility/index-en.html" class="btn btn-primary btn-block">Accessibility guide</a></p>
+        <p><a href="accessibility/index-en.html" class="btn btn-info btn-block">Accessibility guide</a></p>
+      </div>
+    </div>
+  </div>
+</div>
+<h2 id="role">Style guide by role</h2>
+<div class="row">
+  <div class="col-md-4">
+    <div class="panel panel-default">
+      <div class="panel-heading">
+        <h3 class="panel-title">Author role</h3>
+      </div>
+      <div class="panel-body">
+        <p>Showcases the information that an <strong>author, content creator or content coordinator</strong> would need to know.</p>
+        <p><a href="role/author-en.html" class="btn btn-primary btn-block">Author role</a></p>
+      </div>
+    </div>
+  </div>
+  
+  <div class="col-md-4">
+    <div class="panel panel-default">
+      <div class="panel-heading">
+        <h3 class="panel-title">IM / IA role</h3>
+      </div>
+      <div class="panel-body">
+        <p>Showcases the information that an <strong>information manager or information architecture</strong> would need to know.</p>
+        <p><a href="role/ia-en.html" class="btn btn-primary btn-block">IM / IA role</a></p>
+      </div>
+    </div>
+  </div>
+  <div class="col-md-4">
+    <div class="panel panel-default">
+      <div class="panel-heading">
+        <h3 class="panel-title">Designer role</h3>
+      </div>
+      <div class="panel-body">
+        <p>Showcases the information that a <strong>graphic designer, interaction designer or prototyper</strong> would need to know.</p>
+        <p><a href="role/designer-en.html" class="btn btn-primary btn-block">Designer role</a></p>
+      </div>
+    </div>
+  </div>
+</div>
+<div class="row">
+<div class="col-md-4">
+    <div class="panel panel-default">
+      <div class="panel-heading">
+        <h3 class="panel-title">Webmaster / Developer role</h3>
+      </div>
+      <div class="panel-body">
+        <p>Showcases the information that a <strong>webmaster or developer</strong> would need to know.</p>
+        <p><a href="role/webmaster-en.html" class="btn btn-primary btn-block">Webmaster / Developer role</a></p>
+      </div>
+    </div>
+  </div>
+  <div class="col-md-4">
+    <div class="panel panel-default">
+      <div class="panel-heading">
+        <h3 class="panel-title">Manager role</h3>
+      </div>
+      <div class="panel-body">
+        <p>Showcases the information that a <strong>manager</strong> or <strong>project manager</strong> would need to know.</p>
+        <p><a href="role/manager-en.html" class="btn btn-primary btn-block">Manager role</a></p>
       </div>
     </div>
   </div>
